# deeprepo

./: .env.example  .gitignore  AGENT_ORCHESTRATION_PROTOCOL.md  AUDIT_FINDINGS.md  BENCHMARK_RESULTS.md  BUGFIX_SPRINT_PLAN.md  CLAUDE_CODE_DIAGNOSIS.md  CODEX_DIAGNOSIS.md  COLD_START_CTO.md  CTO_AUDIT_v021.md  DEBUGGING_SESSION.md  DEEPREPO_CLI_DEVELOPMENT.md  DEEPREPO_FIX_PLAN.md  DEVELOPMENT.md  ENGINEERING_SPRINT.md  FILM_VERTICAL_SPRINT.md  GET_OUT_GROUND_TRUTH.md  IMPLEMENTATION_REPORT.md  README.md  RESEARCH_JOURNAL.md  RL_EVAL_RESULTS.md  SCRATCHPAD_CODEX.md  SCRATCHPAD_CTO.md  SCRATCHPAD_ENGINEER.md  SPRINT_COMPLETION.md  TASK_A_PROMPT.md  TASK_B_PROMPT.md  TRAINING.md  TUI_DEVELOPMENT_PLAN.md  pyproject.toml  test_baseline.py  test_connectivity.py  test_prompts.py
.deeprepo/: config.yaml
.github/workflows/: ci.yml
archive/: README.md
archive/multi-vertical-sprint/: PRODUCT_DEVELOPMENT.md  SCRATCHPAD_CTO.md
configs/rl/: deeprepo-delegation.toml
deeprepo/: __init__.py  baseline.py  cache.py  cli.py  cli_commands.py  codebase_loader.py  config_manager.py  content_loader.py  context_generator.py  film_loader.py  llm_clients.py  prompts.py  refresh.py  rlm_scaffold.py  scaffold.py  terminal_ui.py  update_check.py  utils.py
deeprepo/domains/: __init__.py  base.py  code.py  content.py  context.py  film.py
deeprepo/skill/: SKILL.md
deeprepo/teams/: __init__.py  base.py
deeprepo/tui/: __init__.py  command_router.py  completions.py  onboarding.py  prompt_builder.py  session_state.py  shell.py
environments/deeprepo_orchestration/: README.md  deeprepo_orchestration.py  prepare_dataset.py  pyproject.toml
examples/: example_analysis_jianghu.md  example_metrics_jianghu.json
examples/fastapi/: baseline_fastapi_20260216_032356.md  baseline_fastapi_20260216_032356_metrics.json  deeprepo_fastapi_20260216_032356.md  deeprepo_fastapi_20260216_032356_metrics.json  rlm_fastapi_20260216_004613.md  rlm_fastapi_20260216_004613_metrics.json
scripts/: score_film_benchmark.py
src/: __init__.py  baseline.py  cli.py  codebase_loader.py  llm_clients.py  rlm_scaffold.py
tests/: test_async_batch.py  test_baseline.py  test_cache.py  test_cli_commands.py  test_cli_entry.py  test_cli_log_status.py  test_codebase_loader.py  test_command_router.py  test_config_manager.py  test_connectivity.py  test_content_loader.py  test_context_domain.py  test_context_gen.py  test_execute_code.py  test_extract_code.py  test_film_integration.py  test_film_loader.py  test_llm_clients_tool_choice.py  test_loader.py  test_onboarding.py  test_prompt_builder.py  test_prompts.py  test_refresh.py  test_retry.py  test_rlm_integration.py  test_scaffold.py  test_screenplay.txt  test_session_state.py  test_teams.py  test_tool_use.py  test_tui_polish.py  test_tui_shell.py  test_turn_budget.py  test_update_check.py
tests/fixtures/sample_project/: README.md  pyproject.toml
(+38 files in other folders)
