[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprepo-cli"
version = "0.2.0"
description = "AI project memory for coding tools. Eliminates the cold start tax in every AI session."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Leon Liu"},
]
keywords = ["ai", "llm", "coding", "developer-tools", "context", "memory", "rlm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "pyperclip>=1.8.0",
]

[project.optional-dependencies]
ui = ["rich>=13.0"]

[project.urls]
Homepage = "https://github.com/Leonwenhao/deeprepo"
Repository = "https://github.com/Leonwenhao/deeprepo"
Issues = "https://github.com/Leonwenhao/deeprepo/issues"

[tool.setuptools.packages.find]
include = ["deeprepo*"]

[project.scripts]
deeprepo = "deeprepo.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
