[project]
name = "deeprepo-orchestration"
description = "Multi-turn REPL environment for training LLMs to orchestrate codebase analysis via sub-LLM delegation"
tags = ["multi-turn", "code-analysis", "tool-use", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["deeprepo_orchestration.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 2
